{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 29,
  "lineage": "77617206-2b74-49b6-349e-741965e5aa02",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "user19-nic1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/networkInterfaces/group03-user19-nic1",
            "ip_configuration": [
              {
                "name": "group03-user19-ip1",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/publicIPAddresses/group03-user19-PIP",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/virtualNetworks/group03-user19-vnet/subnets/group03-user19-subnet1"
              }
            ],
            "location": "koreacentral",
            "mac_address": "00-22-48-05-69-42",
            "name": "group03-user19-nic1",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/networkSecurityGroups/group03-user19-sg",
            "private_ip_address": "3.4.1.4",
            "private_ip_addresses": [
              "3.4.1.4"
            ],
            "resource_group_name": "group03-user19-rg",
            "virtual_machine_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Compute/virtualMachines/group03-user19-VM"
          },
          "depends_on": [
            "azurerm_network_security_group.user19-sg",
            "azurerm_public_ip.user19-publicip",
            "azurerm_resource_group.group03-user19",
            "azurerm_subnet.user19-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "user19-nic2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/networkInterfaces/group03-user19-nic2",
            "ip_configuration": [
              {
                "name": "group03-user19-ip2",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/virtualNetworks/group03-user19-vnet/subnets/group03-user19-subnet2"
              }
            ],
            "location": "koreacentral",
            "mac_address": "00-22-48-05-5F-09",
            "name": "group03-user19-nic2",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/networkSecurityGroups/group03-user19-dbsg",
            "private_ip_address": "3.4.2.4",
            "private_ip_addresses": [
              "3.4.2.4"
            ],
            "resource_group_name": "group03-user19-rg",
            "virtual_machine_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Compute/virtualMachines/group03-user19-DBVM"
          },
          "depends_on": [
            "azurerm_network_security_group.user19-dbsg",
            "azurerm_resource_group.group03-user19",
            "azurerm_subnet.user19-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "user19-dbsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/networkSecurityGroups/group03-user19-dbsg",
            "location": "koreacentral",
            "name": "group03-user19-dbsg",
            "resource_group_name": "group03-user19-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "MariaDB",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.group03-user19"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "user19-sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/networkSecurityGroups/group03-user19-sg",
            "location": "koreacentral",
            "name": "group03-user19-sg",
            "resource_group_name": "group03-user19-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.group03-user19"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "user19-publicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/publicIPAddresses/group03-user19-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.231.30.50",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "group03-user19-PIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "group03-user19-rg",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.group03-user19"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "user19-subnet1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "3.4.1.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/virtualNetworks/group03-user19-vnet/subnets/group03-user19-subnet1",
            "ip_configurations": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/networkInterfaces/group03-user19-nic1/ipConfigurations/group03-user19-ip1"
            ],
            "name": "group03-user19-subnet1",
            "resource_group_name": "group03-user19-rg",
            "virtual_network_name": "group03-user19-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.group03-user19",
            "azurerm_virtual_network.group03-user19-vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "user19-subnet2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "3.4.2.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/virtualNetworks/group03-user19-vnet/subnets/group03-user19-subnet2",
            "ip_configurations": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/networkInterfaces/group03-user19-nic2/ipConfigurations/group03-user19-ip2"
            ],
            "name": "group03-user19-subnet2",
            "resource_group_name": "group03-user19-rg",
            "virtual_network_name": "group03-user19-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.group03-user19",
            "azurerm_virtual_network.group03-user19-vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "group03-user19-vnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "3.4.0.0/16"
            ],
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/virtualNetworks/group03-user19-vnet",
            "location": "koreacentral",
            "name": "group03-user19-vnet",
            "resource_group_name": "group03-user19-rg",
            "subnet": [
              {
                "address_prefix": "3.4.1.0/24",
                "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/virtualNetworks/group03-user19-vnet/subnets/group03-user19-subnet1",
                "name": "group03-user19-subnet1"
              },
              {
                "address_prefix": "3.4.2.0/24",
                "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/group03-user19-rg/providers/Microsoft.Network/virtualNetworks/group03-user19-vnet/subnets/group03-user19-subnet2",
                "name": "group03-user19-subnet2"
              }
            ]
          },
          "depends_on": [
            "azurerm_resource_group.group03-user19"
          ]
        }
      ]
    }
  ]
}